2022-02-09  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-ios.c (pk_open_proc_maps): Use PRIx64 instead of %lx.
	* libpoke/pkl-typify.c (pkl_typify1_ps_type_struct): Use PRIu64
	isntead of %lu.

2022-02-08  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/poke.libpoke/term-if.h (pk_term_end_class): Return 1.

2022-02-07  Jose E. Marchesi  <jemarch@gnu.org>

	* configure.ac: Bump version to 2.1.
	* NEWS: Likewise.
	* doc/gendocs_template: Likewise.

2022-02-06  Jose E. Marchesi  <jemarch@gnu.org>

	* configure.ac: Bump version to 2.0.92.
	* NEWS: Update.

2022-02-06  Bruno Haible  <bruno@clisp.org>
	    Jose E. Marchesi  <jemarch@gnu.org>

	Avoid undefined behaviour on signed integer.
	* libpoke/pvm-val.h (PVM_MAKE_INT): Cast to unsigned integer before
	shifting.
	* libpoke/pvm.jitter (PVM_NEG_SIGNED): Likewise.
	(PVM_DIV_SIGNED): Likewise.
	(PVM_MOD_SIGNED): Likewise.
	* libpoke/pkl-fold.c (OP_UNARY_II): Likewise.
	(OP_BINARY_III): Likewise.


	(pk_cmd_proc): Likewise.

2022-02-05  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pkl-ast.c (pkl_ast_type_is_complete): Fix assertion.

2022-02-05  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-cmd-def.c (PREP_REGEXP_PAYLOAD): Avoid using `regexp'
	uninitialized.
	* poke/pk-cmd-ios.c (pk_cmd_sub): Use PRIx64 instead of %lx.
	(print_info_ios): Likewise.
	(print_info_ios): Likewise.

2022-02-05  Jose E. Marchesi  <jemarch@gnu.org>

	* bootstrap.conf (gnulib_modules): Add the `getsockname' gnulib
	module.
	* poke/pk-hserver.c (pk_hserver_start): Cast the pointer to
	`struct sockaddr_in' to a pointer to a `strut sockaddr_in' before
	passing it to getsockname.  This avoids compiler warnings in some
	platforms.

2022-02-05  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/lib/poke.exp (verify_exit_status): Avoid using
	lassign.

2022-02-05  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-cmd-def.c (print_var_decl): Pass a `match' argument to
	regexec.
	(print_fun_decl): Likewise.
	(print_type_decl): Likewise.
