@@ -1,0 +1,6 @@
+/* { dg-do run } */
+
+var a = 10;
+
+/* { dg-command { a'length } } */
+/* { dg-output "1UL" } */
